# sregame

./: .gitignore  .hrlauncher.toml  .otlp-mcp.json  BOTS.md  Cargo.toml  HEADLESS.md  LICENSE  README.md  bevy_mcp_config.json  build-windows.sh  build.rs  dialogue.md  run.sh  sync-to-windows.sh  test_headless.sh
.cargo/: config.toml
.claude/agents/: bevy-expert.md  endgame-sre-expert.md
.claude/skills/verify/: SKILL.md
.gemini/: settings.json
assets/data/dialogue/: test_evie.dialogue.json
assets/data/maps/: end.json  intro.json  mahogany_row.json  team_disco.json  team_inferno.json  team_marathon.json  team_marathon_retro.json  town_of_endgame.json
build-plan/: 00-overview.md  01-project-setup.md  02-game-states.md  03-player-system.md  04-camera-system.md  05-tilemap-rendering.md  06-dialogue-system.md  07-npc-interactions.md  08-asset-loading.md  09-content-port.md
docs/: HEADLESS.md  HEADLESS_ANSWERS.md  HEADLESS_MODE.md  HEADLESS_QUICKSTART.md  headless-mode.md  headless-quickstart.md  otel-plan.md
docs/agents/: AUTONOMY_GUIDE.md  CONTEXT.md  MEMORY_PROTOCOL.md  NOW.md  PATTERNS.md
docs/agents/gemini-feedback-loop-improvements/: PLAN.md  VISUAL_DATA.md
examples/: headless_brp_demo.sh  test_logging.rs
scripts/: README.md  check-wasm.sh  run-headless.sh  test-full-stack.sh  test-headless-cage.sh  test-remote-protocol.sh  test-telemetry.sh  test-weston-headless.sh  test-weston-simple.sh
src/: asset_manifest.rs  assets.rs  camera.rs  character_sheet.rs  depth.rs  dialogue.rs  game_state.rs  instrumentation.rs  lib.rs  main.rs  map_data.rs  npc.rs  player.rs  semantic_state.rs  telemetry.rs  tilemap.rs  transitions.rs  viewport.rs
tools/: convert_maps.py  rpgmaker_tiles.py  test_convert_maps.py  test_rpgmaker_tiles.py
