[package]
name = "sregame"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17"
bevy_ecs_tilemap = "0.17"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

# OpenTelemetry for logging and tracing (latest versions)
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["logs", "trace", "metrics", "grpc-tonic"] }
opentelemetry-appender-tracing = "0.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
chrono = "0.4"
bevy_remote = "0.17.2"

# Faster compile times during development
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
